--- a/InvMe/InvMe.Android/Resources/layout/SplashScreenActivity.axml
+++ b/InvMe/InvMe.Android/Resources/layout/SplashScreenActivity.axml
@@ -4,7 +4,7 @@
     android:gravity="center"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#CFB2AA">
+    android:background="#70C498">
     <ImageView
         android:id="@+id/iconpic"
         android:layout_width="150px"
