--- a/InvMe/InvMe.Android/Resources/layout/Toolbar.axml
+++ b/InvMe/InvMe.Android/Resources/layout/Toolbar.axml
@@ -3,4 +3,4 @@
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#CFB2AA" />
+    android:background="#70C498" />
