--- a/InvMe/InvMe/View/MainPage.xaml
+++ b/InvMe/InvMe/View/MainPage.xaml
@@ -2,5 +2,8 @@
 <TabbedPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:InvMe"
-             x:Class="InvMe.View.MainPage">
+             x:Class="InvMe.View.MainPage"
+            SelectedTabColor="Black"
+            UnselectedTabColor="Gray"
+            BarBackgroundColor="#FAFAFA">
 </TabbedPage>
