--- a/InvMe/InvMe/View/HashtagsPage.xaml
+++ b/InvMe/InvMe/View/HashtagsPage.xaml
@@ -25,20 +25,8 @@
                 <Entry IsVisible="True" x:Name="townEntry" Grid.Row="2" Grid.Column="1" Style="{StaticResource NormalEntryStyle}" HorizontalOptions="Fill"></Entry>
                 <Button x:Name="addButton" Margin="15,20,15,0" Text="Add hashtag" Clicked="Button_Clicked" Grid.Row="3" Grid.ColumnSpan="2" Style="{StaticResource NormalButtonStyle}"></Button>
             </Grid>
-            <ActivityIndicator x:Name="addHashtagActivator" IsRunning="False"></ActivityIndicator>
-            <Grid>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition></ColumnDefinition>
-                    <ColumnDefinition></ColumnDefinition>
-                </Grid.ColumnDefinitions>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"></RowDefinition>
-                </Grid.RowDefinitions>
-                <Label Text="Hashtags" Grid.Row="0" Grid.Column="0" HorizontalOptions="Center" VerticalOptions="Center" Style="{StaticResource NormalLabelStyle}"/>
-                <Label Text="Places" Grid.Row="0" Grid.Column="1" HorizontalOptions="Center" VerticalOptions="Center" Style="{StaticResource NormalLabelStyle}"/>
-            </Grid>
-            <BoxView HeightRequest="1" BackgroundColor="Black" HorizontalOptions="FillAndExpand" Margin="15,0,15,0"/>
-            <ListView BackgroundColor="Transparent" ItemsSource="{Binding Bindablehashtags}" IsPullToRefreshEnabled="True" Refreshing="HashtagsListView_Refreshing" x:Name="hashtagsListView" ItemTapped="HashtagsListView_ItemTapped">
+            <ActivityIndicator x:Name="addHashtagActivator" IsVisible="False" IsRunning="False"></ActivityIndicator>
+            <ListView HasUnevenRows="True" SeparatorColor="Transparent" ItemsSource="{Binding Bindablehashtags}" IsPullToRefreshEnabled="True" Refreshing="HashtagsListView_Refreshing" x:Name="hashtagsListView" ItemTapped="HashtagsListView_ItemTapped">
                 <ListView.Header>
                     <StackLayout HorizontalOptions="FillAndExpand">
                         <Label x:Name="joinedEventNoItemLabel" Text="No item found..." HorizontalOptions="CenterAndExpand" VerticalOptions="Center" Style="{StaticResource NormalLabelStyle}"></Label>
@@ -47,20 +35,21 @@
                 <ListView.ItemTemplate>
                     <DataTemplate>
                       <customControls:ExtendedViewCell SelectedBackgroundColor="Transparent">
-                            <ViewCell.ContextActions>
-                                <MenuItem Clicked="OnDelete" CommandParameter="{Binding .}" Text="Delete" IsDestructive="True" />
-                            </ViewCell.ContextActions>
-                          <Grid BackgroundColor="White">
-                                <Grid.RowDefinitions>
-                                    <RowDefinition></RowDefinition>
-                                </Grid.RowDefinitions>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition></ColumnDefinition>
-                                    <ColumnDefinition></ColumnDefinition>
-                                </Grid.ColumnDefinitions>
-                                <Label Text="{Binding HASHTAG}" Grid.Row="0" Grid.Column="0" HorizontalOptions="Center" VerticalOptions="Center" Style="{StaticResource NormalLabelStyle}"/>
-                                <Label Text="{Binding TOWN}" Grid.Row="0" Grid.Column="1" HorizontalOptions="Center" VerticalOptions="Center" Style="{StaticResource NormalLabelStyle}"/>
-                            </Grid>
+                            <StackLayout Margin="0" BackgroundColor="#E5E5E5">
+                                <Frame Padding="0" CornerRadius="10" BackgroundColor="White" Margin="5,10,5,10">
+                                    <StackLayout Orientation="Horizontal" Margin="0,15,0,15">
+                                        <StackLayout Orientation="Vertical" Margin="0">
+                                            <Label Text="{Binding HASHTAG}" FontSize="23" HorizontalOptions="Start" VerticalOptions="Center" Style="{StaticResource NormalLabelStyle}"/>
+                                            <Label Text="{Binding TOWN}" FontSize="18" TextColor="#837D7D" HorizontalOptions="Start" VerticalOptions="Center" Style="{StaticResource NormalLabelStyle}"/>
+                                        </StackLayout>
+                                        <Image Margin="0,0,15,0" Source="remove.png" HorizontalOptions="EndAndExpand" VerticalOptions="Center">
+                                            <Image.GestureRecognizers>
+                                                <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped"/>
+                                            </Image.GestureRecognizers>
+                                        </Image>
+                                    </StackLayout>
+                                </Frame>
+                            </StackLayout>
                         </customControls:ExtendedViewCell>
                     </DataTemplate>
                 </ListView.ItemTemplate>
