Some UI changes.

--- a/InvMe/InvMe/App.xaml
+++ b/InvMe/InvMe/App.xaml
@@ -61,7 +61,14 @@
                 <Setter Property="TextColor" Value="{StaticResource NormalFontColor}"/>
                 <Setter Property="FontSize" Value="{StaticResource NormalFontSize}"/>
                 <Setter Property="BackgroundColor" Value="Transparent"/>
-                <Setter Property="HeightRequest" Value="{StaticResource NormalButtonSize}"/> 
+                <Setter Property="HeightRequest" Value="{StaticResource NormalButtonSize}"/>
+                <Setter Property="Margin" Value="15,0,15,0"/>
+            </Style>
+            <Style TargetType="Editor" x:Key="NormalEditorStyle">
+                <Setter Property="TextColor" Value="{StaticResource NormalFontColor}"/>
+                <Setter Property="FontSize" Value="{StaticResource NormalFontSize}"/>
+                <Setter Property="BackgroundColor" Value="Transparent"/>
+                <Setter Property="HeightRequest" Value="150"/>
                 <Setter Property="Margin" Value="15,0,15,0"/>
             </Style>
             <Style TargetType="Frame" ApplyToDerivedTypes="True">
